--- a/views/components/_navbar.ejs
+++ b/views/components/_navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="/">
       <img src="https://cdn-icons-png.flaticon.com/512/4997/4997543.png" alt="code-logo" width="35">
       AyoCoding
     </a>
@@ -15,15 +15,31 @@
         <li class="nav-item">
           <a class="nav-link" href="/categories">Kategori Kelas</a>
         </li>
+        <% if (isLoggedIn) { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/users/<%= userId %>/courses">Kelas Saya</a>
+          </li>
+        <% } %>
       </ul>
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="/login">Masuk</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/register">Daftar</a>
-        </li>
-      </ul>
+      <% if (isLoggedIn) { %>
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/users/<%= userId %>">Profile</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/logout %>">Logout</a>
+          </li>
+        </ul>
+      <% } else { %>
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/login">Masuk</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/register">Daftar</a>
+          </li>
+        </ul>
+      <% } %>
     </div>
   </div>
 </nav>
