--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -32,7 +32,7 @@
 </head>
 <body>
   <!-- Navbar -->
-  <%- include('./components/_navbar') %>
+  <%- include('./components/_navbar', { isLoggedIn, userId }) %>
 
   <!-- Bagian Hero -->
   <div class="hero-section">
@@ -64,6 +64,8 @@
       <a class="btn btn-primary btn-lg" href="/register">Mulai</a>
     </div>
   </div>
+
+  <%- include('./components/_footer.ejs') %>
 
   <!-- Bootstrap JS Bundle (Popper included) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-d7rMz4+u2m1OftOp5PjBTTwPgIBhqVxOBzHwBt7ZZsBfE1+I3q2OcvPImC2iIkJ" crossorigin="anonymous"></script>
