--- a/views/mycourse.ejs
+++ b/views/mycourse.ejs
@@ -4,23 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AyoCoding</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <style>
+    footer {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
+  </style>
 </head>
 <body>
-  <h1>My Course</h1>
-  <% if (data.Courses.length) { %>
-    <table border="1">
-      <tr>
-        <th>Name</th>
-        <th>Description</th>
-      </tr>
-      <% data.Courses.forEach(el => { %>
+  <%- include('./components/_navbar', { isLoggedIn, userId }) %>
+
+  <div class="container" style="margin-top: 5rem;">
+    <h2>My Course List</h2>
+    <% if (data.Courses.length) { %>
+      <table class="table">
         <tr>
-          <td><%= el.title %></td>
-          <td><%= el.description %></td>
+          <th>Name</th>
+          <th>Description</th>
         </tr>
-      <% }) %>
-    </table>
-  <% } %>
+        <% data.Courses.forEach(el => { %>
+          <tr>
+            <td><%= el.title %></td>
+            <td><%= el.description %></td>
+          </tr>
+        <% }) %>
+      </table>
+    <% } %>
+  </div>
   
   <%- include('./components/_footer.ejs') %>
 
