--- a/views/user.ejs
+++ b/views/user.ejs
@@ -14,6 +14,9 @@
 
   <div class="container mb-5" style="margin-top: 5rem;">
     <h2>User Profile</h2>
+    <% if (!alert) { %>
+      <div class="alert alert-info">Akun ini dibuat pada <%= data.Profile.getAccountYears() %></div>
+    <% } %>
     <% if (alert) { %>
       <div class="alert alert-success"><%= alert %></div>
     <% } %>
@@ -45,7 +48,6 @@
             <input type="text" class="form-control" name="role" value="<%= data.role %>" disabled>
           </div>
 
-          <% console.log(data) %>
           <!-- Is Member -->
           <div class="mb-3">
             <label for="isMember" class="form-label">Is Member:</label>
@@ -93,6 +95,8 @@
       <button type="submit" class="btn btn-primary">Update Profile</button>
     </form>
   </div>
+
+  <%- include('./components/_footer.ejs') %>
 
   <!-- Bootstrap JS Bundle (Popper included) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
