--- a/views/register.ejs
+++ b/views/register.ejs
@@ -49,7 +49,7 @@
   
       <div class="form-group">
         <div class="form-floating mb-1">
-          <input name="username" type="text" class="form-control" id="floatingInput" placeholder="john_doe">
+          <input name="username" type="text" class="form-control" id="floatingInput" placeholder="john_doe" autofocus>
           <label for="floatingInput">Username</label>
         </div>
         <div class="form-floating mb-1">
