--- a/views/login.ejs
+++ b/views/login.ejs
@@ -35,7 +35,7 @@
       <% } %>
       
       <div class="form-floating mb-1">
-        <input name="username" type="text" class="form-control" id="floatingInput" placeholder="john_doe">
+        <input name="username" type="text" class="form-control" id="floatingInput" placeholder="john_doe" autofocus>
         <label for="floatingInput">Username</label>
       </div>
       <div class="form-floating mb-1">
