--- a/views/components/_footer.ejs
+++ b/views/components/_footer.ejs
@@ -1,5 +1,5 @@
 <footer class="bg-dark text-light text-center py-3">
   <div class="container">
-    <p>&copy; 2023 Hacktiv8. Phase 1 Pair Project.</p>
+    <p>&copy; 2023 Hacktiv8. Phase 1 Pair Project - by Husein and Hakim</p>
   </div>
 </footer>
