--- a/views/course-detail.ejs
+++ b/views/course-detail.ejs
@@ -20,6 +20,9 @@
   
   <!-- Detail Course Section -->
   <div class="container" style="margin-top: 5rem;">
+    <% if (alert) { %>
+      <div class="alert alert-secondary"><%= alert.split(',').join(', ') %></div>
+    <% } %>
     <div class="row vertical-center">
       <!-- Course Thumbnail -->
       <div class="col-md-6 text-center">
